# advent-of-code-2023

./: .gitignore  README.md  prep_day.sh  pyproject.toml
advent_of_code_2023/: utils.py
advent_of_code_2023/day_1/: trebuchet.py
advent_of_code_2023/day_10/: pipe_maze.py
advent_of_code_2023/day_11/: cosmic_expansion.py
advent_of_code_2023/day_2/: cube_conundrum.py
advent_of_code_2023/day_3/: gear_ratios.py
advent_of_code_2023/day_4/: scratch_card.py
advent_of_code_2023/day_5/: seeds.py
advent_of_code_2023/day_6/: boat_race.py
advent_of_code_2023/day_7/: camel_cards.py
advent_of_code_2023/day_8/: haunted_wastelands.py
advent_of_code_2023/day_9/: mirage_maintenance.py
day_1/: day_1_solution.py  solution.py
