[tool.poetry]
name = "advent-of-code-2023"
version = "0.1.0"
description = "Advent of code attempty - 2023"
authors = ["Heuristic Pedals <heuristicpedals@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.11.0"
pre-commit = "^3.5.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
