[tool.poetry]
name = "advent_of_code_2023"
version = "0.1.0"
description = "Advent of code attempty - 2023"
authors = ["Heuristic Pedals <heuristicpedals@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
shapely = "^2.0.2"
joblib = "^1.3.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.11.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.flake8]
max-line-length = 79

[tool.isort]
line_length = 79
